<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contacto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cardenas.adan.mascotas.activities.ActivityContacto">

    <include
        android:id="@+id/main_custom_actionbar"
        layout="@layout/action_bar_mascotas"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/activity_contacto_encabezado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:text="@string/activity_contacto_textview_titulo"
            android:textSize="@dimen/encabezado1" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_contacto_textinput_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_contacto_textinputedit_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_contacto_hint_nombre" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_contacto_textinput_correo_electronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_contacto_textinputedit_correo_electronico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_contacto_hint_correo"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_contacto_textinput_comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_contacto_textinputedit_comentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_contacto_hint_comentario" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/activity_contacto_button_enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/espaciado_med"
            android:text="@string/activity_contacto_boton_enviar" />
    </LinearLayout>
</LinearLayout>